--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -126,7 +126,7 @@ h6 {
 }
 
 .navbar-site {
-  background-color: white !important;
+  background-color: #131946 !important;
   /* height: 75px !important; */
   -webkit-box-shadow: 0 20px 15px 0 rgba(0,0,0,0.1);
   -moz-box-shadow: 0 20px 15px 0 rgba(0,0,0,0.1);
@@ -138,15 +138,15 @@ h6 {
 }
 
 #navbar-items-custom li a {
-  color: #00366f;
+  color: white;
 }
 
 .custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,54,111)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 4l24 24M4 28l24 -24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 4l24 24M4 28l24 -24'/%3E%3C/svg%3E");
 }
 
 .custom-toggler .collapsed .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,54,111)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 
@@ -210,62 +210,34 @@ h6 {
 --------------------------------------------------------------*/
 
 #intro {
-  width: 100%;
-  position: relative;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
+}
+
+#intro .jumbotron {
+  background-image: url("../img/intro-bg.jpg");
   background-size: cover;
-  padding: 150px 0 0 0;
-  background: url("../img/intro-bg.png") no-repeat center bottom;
-}
-
-@media (min-height: 700px) {
-  #intro {
-    height: auto;
-    padding: 150px 0 100px 0;
-    margin-bottom: 25px;
-  }
-
-  #intro-bottom {
-    margin-top: -124px;
-  }
-
-  #intro .intro-info {
-    padding-top: 65px;
-    width: 30%;
-  }
-}
-
-#intro .intro-img {
-  height: 50%;
-  width: 50%;
-  float: right;
+  padding-bottom: 100px;
+  padding-top: 150px;
 }
 
 #intro .intro-info {
   padding-top: 65px;
-  width: 40%;
-  float: left;
+  text-align: center;
 }
 
 #intro .intro-info h2 {
-  color: #fff;
   margin-bottom: 40px;
-  font-size: 40px;
-  font-weight: 700;
+  font-size: 35px;
+  font-weight: bold;
 }
 
 #intro .intro-info p {
-  color: #fff;
   margin-bottom: 30px;
   font-size: 25px;
   font-weight: 400;
 }
 
-#intro .intro-info h2 span {
-  color: #74b5fc;
-  text-decoration: underline;
-}
 
-#intro .intro-info .btn-get-started,
 #intro .intro-info .btn-services {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
@@ -275,32 +247,18 @@ h6 {
   padding: 10px 32px;
   border-radius: 50px;
   transition: 0.5s;
-  margin: 0 20px 20px 0;
-  color: #fff;
-}
-
-#intro .intro-info .btn-get-started {
-  background: #007bff;
-  border: 2px solid #007bff;
-  color: #fff;
-}
-
-#intro .intro-info .btn-get-started:hover {
-  background: none;
-  border-color: #fff;
-  color: #fff;
-  text-decoration: none;
+  color: #007bff;
 }
 
 #intro .intro-info .btn-services {
   background: transparent;
-  border: 2px solid #fff;
+  border: 2px solid #007bff;
 }
 
 #intro .intro-info .btn-services:hover {
-  background: white;
-  border-color: white;
-  color: #007bff;
+  background:  #007bff;
+  border-color:  #007bff;
+  color:  #131946;
   text-decoration: none;
 }
 
@@ -483,13 +441,14 @@ h6 {
 /* About Us Section
 --------------------------------*/
 
-#phonepng {
-  max-width: 270px;
-}
-
 #about {
   background: #fff;
   padding: 80px 0;
+}
+
+#about img {
+  height: 60%;
+  width: 60%;
 }
 
 #wrapper-features1 {
@@ -694,15 +653,13 @@ h6 {
   margin: 0;
   padding:0;
   text-align: center;
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
 }
 
 #video-install {
   background: url("../img/video-pic.jpg");
   background-repeat:no-repeat;
-  background-size: 100% auto;
   background-position: center;
-  /* background-attachment: fixed; */
-  
 }
 
 #video .video-pic {
@@ -1344,21 +1301,11 @@ h6 {
 }
 
 @media (max-width: 574px) {
-  #intro {
-    padding: 100px 0 20px 0;
-  }
-  #intro-bottom {
-    visibility: hidden;
-  }
   #intro .intro-info {
     padding-top: 10px;
   }
-  #intro-img-1 {
-    padding-top: 40px;
-    vertical-align: bottom;
-  }
-
 }
+
 
 /*************************/
 /*        Loader         */
