--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1042,7 +1042,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #footer {
-  background: #00428a;
+  background: #131946;
   padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
