--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -7,6 +6,53 @@ body {
   background: #fff;
   color: #444;
   font-family: "Montserrat", sans-serif;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+#return-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #007bff;
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  z-index: 2 !important;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top:hover {
+  background: #007bff;
+  cursor: pointer;
+}
+#return-to-top:hover i {
+  color: #fff;
+  top: 5px;
 }
 
 a {
@@ -35,60 +81,9 @@ h5,
 h6 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  margin: 0 0 20px 0;
   padding: 0;
 }
 
-/* Back to top button */
-
-.back-to-top {
-  position: fixed;
-  display: none;
-  background: #007bff;
-  color: #fff;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  line-height: 1;
-  font-size: 16px;
-  border-radius: 50%;
-  right: 15px;
-  bottom: 15px;
-  transition: background 0.5s;
-  z-index: 11;
-}
-
-.back-to-top i {
-  padding-top: 12px;
-  color: #fff;
-}
-
-/* Prelaoder */
-
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9999;
-  overflow: hidden;
-  background: #fff;
-}
-
-#preloader:before {
-  content: "";
-  position: fixed;
-  top: calc(50% - 30px);
-  left: calc(50% - 30px);
-  border: 6px solid #f2f2f2;
-  border-top: 6px solid #007bff;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  -webkit-animation: animate-preloader 1s linear infinite;
-  animation: animate-preloader 1s linear infinite;
-}
 
 @-webkit-keyframes animate-preloader {
   0% {
@@ -118,14 +113,47 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 
-#header {
-  height: 80px;
-  transition: all 0.5s;
-  z-index: 997;
-  transition: all 0.5s;
-  padding: 20px 0;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
+#logo-text {
+  font-weight: bold;
+  color: #00366f;
+  margin-bottom: 7px;
+}
+
+#homelink {
+  font-weight: 600;
+  max-width: 70%;
+}
+
+.navbar-site {
+  background-color: #131946 !important;
+  /* height: 75px !important; */
+  -webkit-box-shadow: 0 20px 15px 0 rgba(0,0,0,0.1);
+  -moz-box-shadow: 0 20px 15px 0 rgba(0,0,0,0.1);
+  box-shadow: 0 0 20px 15px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-site .container {
+  padding: 0;
+}
+
+#navbar-items-custom li a {
+  color: white;
+}
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 4l24 24M4 28l24 -24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler .collapsed .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+
+#logo-img {
+  padding: 5px 0 5px 0;
+  margin: 0;
+  max-height: 44px;
+  max-width: 100%;
 }
 
 #header.header-scrolled,
@@ -144,8 +172,8 @@ h6 {
   text-transform: uppercase;
 }
 
-#header .logo h1 a,
-#header .logo h1 a:hover {
+#header .logo h2 a,
+#header .logo h2 a:hover {
   color: #00366f;
   text-decoration: none;
 }
@@ -160,41 +188,55 @@ h6 {
   margin-top: 60px;
 }
 
+.navbar .btn-custom-iot,
+.navbar .btn-custom-iot:focus {
+  border-radius: 50px !important;
+  color: #fff !important;
+  background: #007bff !important;
+  border: 2px solid #007bff !important;
+}
+
+.navbar .btn-custom-iot:hover {
+  background: white !important;
+  color: #007bff !important;
+  text-decoration: none !important;
+}
+
+
+
 /*--------------------------------------------------------------
 # Intro Section
 --------------------------------------------------------------*/
 
 #intro {
-  width: 100%;
-  position: relative;
-  background: url("../img/intro-bg.png") center bottom no-repeat;
-  background-size: cover;
-  padding: 200px 0 120px 0;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
 }
 
-#intro .intro-img {
-  width: 50%;
-  float: right;
+#intro .jumbotron {
+  background-image: url("../img/intro-bg.jpg");
+  background-size: cover;
+  padding-bottom: 100px;
+  padding-top: 150px;
 }
 
 #intro .intro-info {
-  width: 50%;
-  float: left;
+  padding-top: 65px;
+  text-align: center;
 }
 
 #intro .intro-info h2 {
-  color: #fff;
   margin-bottom: 40px;
-  font-size: 48px;
-  font-weight: 700;
+  font-size: 35px;
+  font-weight: bold;
 }
 
-#intro .intro-info h2 span {
-  color: #74b5fc;
-  text-decoration: underline;
+#intro .intro-info p {
+  margin-bottom: 30px;
+  font-size: 25px;
+  font-weight: 400;
 }
 
-#intro .intro-info .btn-get-started,
+
 #intro .intro-info .btn-services {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
@@ -204,31 +246,22 @@ h6 {
   padding: 10px 32px;
   border-radius: 50px;
   transition: 0.5s;
-  margin: 0 20px 20px 0;
-  color: #fff;
-}
-
-#intro .intro-info .btn-get-started {
-  background: #007bff;
-  border: 2px solid #007bff;
-  color: #fff;
-}
-
-#intro .intro-info .btn-get-started:hover {
-  background: none;
-  border-color: #fff;
-  color: #fff;
+  color: #007bff;
 }
 
 #intro .intro-info .btn-services {
-  border: 2px solid #fff;
+  background: transparent;
+  border: 2px solid #007bff;
 }
 
 #intro .intro-info .btn-services:hover {
-  background: #007bff;
-  border-color: #007bff;
-  color: #fff;
+  background:  #007bff;
+  border-color:  #007bff;
+  color:  #131946;
+  text-decoration: none;
 }
+
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -267,69 +300,6 @@ h6 {
   text-decoration: none;
 }
 
-.main-nav .drop-down ul {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: calc(100% + 30px);
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  padding: 10px 0;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: ease all 0.3s;
-}
-
-.main-nav .drop-down:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.main-nav .drop-down li {
-  min-width: 180px;
-  position: relative;
-}
-
-.main-nav .drop-down ul a {
-  padding: 10px 20px;
-  font-size: 13px;
-  color: #004289;
-}
-
-.main-nav .drop-down ul a:hover,
-.main-nav .drop-down ul .active > a,
-.main-nav .drop-down ul li:hover > a {
-  color: #007bff;
-}
-
-.main-nav .drop-down > a:after {
-  content: "\f107";
-  font-family: FontAwesome;
-  padding-left: 10px;
-}
-
-.main-nav .drop-down .drop-down ul {
-  top: 0;
-  left: calc(100% - 30px);
-}
-
-.main-nav .drop-down .drop-down:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-}
-
-.main-nav .drop-down .drop-down > a {
-  padding-right: 35px;
-}
-
-.main-nav .drop-down .drop-down > a:after {
-  content: "\f105";
-  position: absolute;
-  right: 15px;
-}
 
 /* Mobile Navigation */
 
@@ -472,7 +442,16 @@ h6 {
 
 #about {
   background: #fff;
-  padding: 60px 0;
+  padding: 80px 0;
+}
+
+#about img {
+  height: 60%;
+  width: 60%;
+}
+
+#wrapper-features1 {
+  padding-top: 1rem;
 }
 
 #about .about-container .background {
@@ -585,63 +564,9 @@ h6 {
   margin: auto;
 }
 
-/* Services Section
+
+/* Why Us Section
 --------------------------------*/
-
-#services {
-  padding: 60px 0 40px 0;
-  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
-}
-
-#services .box {
-  padding: 30px;
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  margin: 0 10px 40px 10px;
-  background: #fff;
-  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
-  transition: all 0.3s ease-in-out;
-}
-
-#services .box:hover {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-}
-
-#services .icon {
-  position: absolute;
-  left: -10px;
-  top: calc(50% - 32px);
-}
-
-#services .icon i {
-  font-size: 64px;
-  line-height: 1;
-  transition: 0.5s;
-}
-
-#services .title {
-  margin-left: 40px;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-}
-
-#services .title a {
-  color: #111;
-}
-
-#services .box:hover .title a {
-  color: #007bff;
-}
-
-#services .description {
-  font-size: 14px;
-  margin-left: 40px;
-  line-height: 24px;
-  margin-bottom: 0;
-}
 
 #why-us {
   padding: 60px 0;
@@ -718,159 +643,64 @@ h6 {
   color: #cce5ff;
 }
 
+
+/* Video Section
+--------------------------------*/
+
+#video {
+  width:100%;
+  margin: 0;
+  padding:0;
+  text-align: center;
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+}
+
+#video-install {
+  background: url("../img/video-pic.jpg");
+  background-repeat:no-repeat;
+  background-position: center;
+}
+
+#video .video-pic {
+  position: relative;
+  height: 650px;
+  z-index: 1;
+}
+
+#video .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  color: white;
+  background-color: #555;
+  font-size: 20px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+
 /* Portfolio Section
 --------------------------------*/
 
 #portfolio {
-  padding: 60px 0;
+  padding: 80px 0;
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
 }
 
-#portfolio #portfolio-flters {
-  padding: 0;
-  margin: 5px 0 35px 0;
-  list-style: none;
-  text-align: center;
-}
-
-#portfolio #portfolio-flters li {
-  cursor: pointer;
-  margin: 15px 15px 15px 0;
-  display: inline-block;
-  padding: 6px 20px;
-  font-size: 12px;
-  line-height: 20px;
-  color: #007bff;
-  border-radius: 50px;
-  text-transform: uppercase;
-  background: #ecf5ff;
-  margin-bottom: 5px;
-  transition: all 0.3s ease-in-out;
-}
-
-#portfolio #portfolio-flters li:hover,
-#portfolio #portfolio-flters li.filter-active {
-  background: #007bff;
-  color: #fff;
-}
-
-#portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
-}
-
-#portfolio .portfolio-item {
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 30px;
-}
-
-#portfolio .portfolio-item .portfolio-wrap {
-  overflow: hidden;
-  position: relative;
-  border-radius: 6px;
-  margin: 0;
-}
-
-#portfolio .portfolio-item .portfolio-wrap:hover img {
-  opacity: 0.4;
-  transition: 0.3s;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  text-align: center;
-  opacity: 0;
-  transition: 0.2s linear;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info h4 {
-  font-size: 22px;
-  line-height: 1px;
-  font-weight: 700;
-  margin-bottom: 14px;
-  padding-bottom: 0;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info h4 a {
-  color: #fff;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info h4 a:hover {
-  color: #007bff;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info p {
-  padding: 0;
-  margin: 0;
-  color: #e2effe;
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details {
-  display: inline-block;
-  line-height: 1;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  background: #007bff;
-  border-radius: 50%;
-  margin: 10px 4px 0 4px;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview i,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details i {
-  padding-top: 6px;
-  font-size: 22px;
-  color: #fff;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover {
-  background: #3395ff;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover i,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover i {
-  color: #fff;
-}
-
-#portfolio .portfolio-item .portfolio-wrap:hover {
-  background: #003166;
-}
-
-#portfolio .portfolio-item .portfolio-wrap:hover .portfolio-info {
-  opacity: 1;
+#portfolio .container .section-header {
+  padding-bottom: 65px;
 }
 
 /* Testimonials Section
 --------------------------------*/
 
 #testimonials {
-  padding: 60px 0;
+  /* margin-top: 60px; */
+  padding: 70px 0;
   box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -905,24 +735,6 @@ h6 {
   margin: 0 0 15px 140px;
 }
 
-#testimonials .owl-nav,
-#testimonials .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-#testimonials .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#testimonials .owl-dot.active {
-  background-color: #007bff;
-}
 
 /* Team Section
 --------------------------------*/
@@ -935,9 +747,9 @@ h6 {
 
 #team .member {
   text-align: center;
+  border-radius: 50%;
   margin-bottom: 20px;
   position: relative;
-  border-radius: 50%;
   overflow: hidden;
 }
 
@@ -966,6 +778,10 @@ h6 {
 #team .member .member-info-content {
   margin-top: 50px;
   transition: margin 0.2s;
+}
+
+#team .member .member-info-content span {
+  font-family: "Open Sans", sans-serif;
 }
 
 #team .member:hover .member-info {
@@ -1011,58 +827,93 @@ h6 {
   margin: 0 2px;
 }
 
-/* Clients Section
+
+
+/* FAQ Section
 --------------------------------*/
 
-#clients {
-  padding: 60px 0;
-  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+#faq {
+  padding: 70px 0 50px 0;
 }
 
-#clients .clients-wrap {
-  border-top: 1px solid #d6eaff;
-  border-left: 1px solid #d6eaff;
-  margin-bottom: 30px;
+#faq .card-header {
+  padding: 0.75rem;
 }
 
-#clients .client-logo {
-  padding: 64px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  border-right: 1px solid #d6eaff;
-  border-bottom: 1px solid #d6eaff;
-  overflow: hidden;
-  background: #fff;
-  height: 160px;
+#faq .faq-header {
+  margin-bottom: 40px;
 }
 
-#clients .client-logo:hover img {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+#faq .btn-faq {
+  width: 100%;
+  text-decoration: none;
+  text-align: left;
+  white-space: normal;
 }
 
-#clients img {
-  transition: all 0.4s ease-in-out;
+#faq .faq-question {
+  /*margin: 10px !important;*/
+  font-weight: 400;
+  font-size: 1rem;
+  color: #007bff;
 }
+
+#faq .card-faq {
+  background: white !important;
+}
+
+#faq .card-faq .card-header {
+  border-left: 5px solid #007bff;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+
+#faq .card-faq .card-header h2 h5 {
+  display: inline-block;
+  color: #007bff;
+  font-weight: bold;
+  font-size: large;
+  margin-right: 5px;
+  margin-bottom: 0;
+}
+
+#faq .card-faq .card-header h2 {
+  display: inline-block;
+}
+
+#faq .card-body {
+  padding: 20px 25px;
+}
+
+#faq .card-body h5 {
+  color: #007bff;
+  font-weight: bold;
+  font-size: large;
+}
+
+
 
 /* Contact Section
 --------------------------------*/
 
 #contact {
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
-  padding: 60px 0;
+  padding: 85px 0;
   overflow: hidden;
- 
+  background-color: white !important;
+}
+
+#contact .form-control {
+  color: black !important;
+  font-size: 15px !important;
+}
+
+#contact .form-control:focus {
+  border-color: #0067d5 !important;
+}
+
+#contact .contactForm {
+  color: black !important;
 }
 
 #contact .section-header {
@@ -1190,15 +1041,37 @@ h6 {
 --------------------------------------------------------------*/
 
 #footer {
-  background: #00428a;
+  background: #131946;
   padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
 }
 
+#footer .press-kit,
+#footer .press-kit:hover,
+#footer .press-kit:focus {
+  color: white;
+  cursor: pointer;
+}
+
+#footer .press-kit:hover {
+  text-decoration: underline;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 30vh;
+  z-index: 1 !important;
+}
+
+#location-image {
+  width: 40px;
+  height: 40px;
+}
+
 #footer .footer-top {
   background: #004a99;
-  padding: 60px 0 30px 0;
+  padding: 60px 0 0 0;
 }
 
 #footer .footer-top .footer-info {
@@ -1224,6 +1097,7 @@ h6 {
   font-family: "Montserrat", sans-serif;
   color: #ecf5ff;
 }
+
 
 #footer .footer-top .social-links a {
   font-size: 18px;
@@ -1353,10 +1227,6 @@ h6 {
     padding: 8px 0;
   }
 
-  #intro {
-    padding: 140px 0 60px 0;
-  }
-
   #intro .intro-img {
     width: 80%;
     float: none;
@@ -1378,6 +1248,24 @@ h6 {
 @media (max-width: 768px) {
   .back-to-top {
     bottom: 15px;
+  }
+  #video-install {
+   background-attachment: local;
+  }
+  #video .video-pic {
+    height: 250px;
+  }
+}
+
+@media (min-width: 768px) {
+  .order-modal {
+    max-width: 750px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .order-modal {
+    max-width: 850px !important;
   }
 }
 
@@ -1412,7 +1300,80 @@ h6 {
 }
 
 @media (max-width: 574px) {
-  #intro {
-    padding: 100px 0 20px 0;
+  #intro .intro-info {
+    padding-top: 10px;
   }
 }
+
+
+/*************************/
+/*        Loader         */
+/*************************/
+.loader {
+  background-color: white;
+  position: absolute;
+  top: calc(50% - 4em);
+  left: calc(50% - 4em);
+  width: 6em;
+  height: 6em;
+  border: 1.1em solid rgba(0, 0, 0, 0.2);
+  border-left: 1.1em solid #00428A;
+  border-radius: 50%;
+  animation: load 1000ms infinite ease;
+  transition: opacity 200ms;
+}
+
+@keyframes load {
+  0% {
+    transform: rotate(-90deg);
+  }
+
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+.loader--hide {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 1s, opacity 1s;
+}
+
+.page-show {
+  animation: load-content ease 4s;
+  -webkit-animation: load-content ease 4s;
+  -moz-animation: load-content ease 4s;
+  -o-animation: load-content ease 4s;
+  -ms-animation: load-content ease 4s;
+}
+
+@keyframes load-content {
+  0% {opacity: 0;}
+  30% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@-moz-keyframes load-content {
+  0% {opacity: 0;}
+  30% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@-webkit-keyframes load-content {
+  0% {opacity: 0;}
+  30% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@-o-keyframes load-content {
+  0% {opacity: 0;}
+  30% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@-ms-keyframes load-content {
+  0% {opacity: 0;}
+  30% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
