--- a/src/assets/lib/bootstrap/css/bootstrap.css
+++ b/src/assets/lib/bootstrap/css/bootstrap.css
@@ -159,7 +159,7 @@ a {
 
 a:hover {
   color: #0056b3;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
 }
 
 a:not([href]):not([tabindex]) {
@@ -241,7 +241,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: inherit;
+  /*font-family: inherit;*/
   font-size: inherit;
   line-height: inherit;
 }
@@ -351,7 +351,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
+  /*font-family: inherit;*/
   font-weight: 500;
   line-height: 1.2;
   color: inherit;
@@ -1894,7 +1894,7 @@ pre code {
 
 .form-control::-moz-placeholder {
   color: #6c757d;
-  opacity: 0.3;
+  opacity: 03;
 }
 
 .form-control:-ms-input-placeholder {
@@ -2383,7 +2383,7 @@ textarea.form-control {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  /*padding: 0.375rem 0.75rem;*/
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
@@ -2958,7 +2958,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:focus, .btn-link.focus {
-  text-decoration: underline;
+  /*text-decoration: underline;*/
   box-shadow: none;
 }
 
@@ -7785,7 +7785,7 @@ button.bg-dark:focus {
 
 .mb-0,
 .my-0 {
-  margin-bottom: 0 !important;
+  /*margin-bottom: 0 !important;*/
 }
 
 .ml-0,
@@ -9815,7 +9815,7 @@ a.text-dark:hover, a.text-dark:focus {
     box-shadow: none !important;
   }
   a:not(.btn) {
-    text-decoration: underline;
+    /*text-decoration: underline;*/
   }
   abbr[title]::after {
     content: " (" attr(title) ")";
